--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>이력서 포트폴리오</title>
+    <title>JYY PORTFOLIO</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,6 +21,7 @@
     <link rel="stylesheet" type="text/css" href="./css/main.css" />
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/skill.js"></script>
   </head>
   <body>
     <div id="wrap">
@@ -49,14 +50,18 @@
       <div id="About_me">
         <div class="About_me_in">
             <p class="About_ttl">About me</p>
-            <p class="About_txt">"안녕하세요!<br>
-            저는 긍정적인 프론트앤드 개발자 <br>
-          장유영입니다."</p>
-            <div class="box1">
+            <!-- <p class="About_txt"> 이름<br>
+              생년월일<br> 지역<br> 학교전공</p> -->
+              <div class="About_box">
+                <p class="About_txt1"> 이름<br>
+                  생년월일<br> 지역<br> 학교전공</p>
+                <p class="About_txt2">장유영<br>94.08.08<br>부산<br>부경대학교/중국학과 </p>
+              </div>
+            <!-- <div class="box1">
               <p>장유영
-                부경대학교 중국학과 전공
+                부경대학교 중국학과 전공~
               </p>
-            </div>
+            </div> -->
           <img
             src="./images/KakaoTalk_20221103_151440572.jpg"
             alt=""
@@ -124,7 +129,9 @@
       <div class="Project1_in">
         <div class="txt_box">
           <p class="txt1">01.Aesop</p>
-          <p class="txt2">이솝 사이트를 클론코딩 함</p>
+          <p class="txt2">이솝 사이트를 클론코딩 
+            왜 이사이트를 했고 어떤 기능있는지 설명
+          </p>
           </div>
           <div id="monitor_box">
         <div class="box">
@@ -163,7 +170,21 @@
         <!-- 이메일 -->
    
       <div id="e-mail">
-        <p class="e-mail_ttl">Thank you</p>
+        <div class="e-mail_ttl">
+        <h1 >
+          <span>C</span>
+          <span>o</span>
+          <span>n</span>
+          <span>t</span>
+          <span>a</span>
+          <span>c</span>
+          <span>t</span>
+          <span> </span>
+          <span>M</span>
+          <span>e</span>
+          <span>!</span>
+        </h1>
+        </div>
         <div>
          
           <form id="form">
@@ -225,7 +246,7 @@
           <li><a href="#">Home</a></li>
           <li><a href="#">About me</a></li>
           <li><a href="#">Skill</a></li>
-          <li><a href="#">project1</a></li>
+          <li><a href="#">project</a></li>
           <li><a href="#">finish</a></li>
           
         </ul>
